# SnapTrack

./: .gitignore  README.md  app.py  aws-sample-response2-alt.json  aws.py  filter-response.ipynb  pyproject.toml  receipt-parser.py  receipt_parser.py  test.py
data/: purchase-data.json
src/snaptrack/: app.py  cli.py  notion.py  receipt_parser.py
test/: aws-sample-response1.json  aws-sample-response2.json  column-customization.ipynb  combining.ipynb  filter-response.ipynb  notion-response.ipynb  test.py  test_notion.py  test_receipt_parser.ipynb  test_receipt_parser.py
