[tool.poetry]
name = "snaptrack"
version = "0.1.0"
description = ""
authors = ["Krish Shah <shahkrish2016@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "snaptrack", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.6.1"
python-dotenv = "^1.0.0"
boto3 = "^1.34.11"
notion-client = "^2.2.1"
spacy = "^3.7.2"
click = "^8.1.7"
yaspin = "^3.0.1"
keyring = "^24.3.0"
colorama = "^0.4.6"

[tool.poetry.scripts]
snaptrack = "snaptrack.cli:send_receipt"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
